# wbms_core

./: .gitignore  README.md
hrpsys_wbms/: .gitignore  CMakeLists.txt  README.md  cmake-args.sh  package.xml  setup.py
hrpsys_wbms/idl/: HapticControllerService.idl  WholeBodyMasterSlaveService.idl
hrpsys_wbms/rtc/AutoBalancer/: FullbodyInverseKinematicsSolver.h  MyUtils.h
hrpsys_wbms/rtc/HapticController/: CMakeLists.txt  HapticController.cpp  HapticController.h
hrpsys_wbms/rtc/WholeBodyMasterSlave/: CMakeLists.txt  WholeBodyMasterSlave.cpp  WholeBodyMasterSlave.h  WholeBodyMasterSlaveService_impl.cpp  WholeBodyMasterSlaveService_impl.h  wbms_core.h
hrpsys_wbms/src/hrpsys_wbms/: master_config.py  slave_config.py
wbms_ros_bridge/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
wbms_ros_bridge/launch/: wbms_ros_bridge.launch
wbms_ros_bridge/src/: MasterSlaveROSBridge.cpp  connect_two_master.cpp
