<?xml version="1.0"?>
<package format="2">
  <name>hrpsys_wbms</name>
  <version>0.0.0</version>
  <description>RT components for wbms</description>

  <maintainer email="yoshioka@jsk.t.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hrpsys</depend>
</package>
